<resources>
    <string name="app_name">Map2</string>
    <string name="title_activity_maps">Map</string>
    <string name="시간표">시간표</string>
    <string name="스케줄러">스케줄러</string>
    <string name="U_saint">U_saint</string>

    <string name="학교홈페이지">학교홈페이지</string>
    <string name="학부홈페이지">학부홈페이지</string>
    <string name="열람실">열람실</string>
    <string name="찾아오시는길">찾아오시는길</string>

    <string name="Example">Example</string>

    <string name="Example2">Example2</string>
    <string name="confirm">확인</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_firstactivity">firstactivity</string>
    <string name="facebook_app_id">1462842444021559</string>
</resources>
