<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/usaint"
        android:title="@string/U_saint"
        app:showAsAction="ifRoom|withText"
        />

    <item
    android:id="@+id/homepage"
    android:title="@string/학교홈페이지"
    app:showAsAction="ifRoom|withText"
    />
    <item
        android:id="@+id/homepage2"
        android:title="@string/학부홈페이지"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/library"
        android:title="@string/열람실"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/map1234"
        android:title="@string/찾아오시는길"
        app:showAsAction="ifRoom|withText"
        />
</menu>
